--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <form id="transactionForm">
     <div class="group">
         <div class="group1">
+            <label>Type :</label>
             <select id="type">
                 <option value="" disabled selected>Choose one</option>
                 <option value="Income">Income</option>
